task6. fix animation card in portfolio/ better visibility translate

--- a/style/style.css
+++ b/style/style.css
@@ -615,14 +615,12 @@ body {
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   display: flex;
   align-items: center;
   letter-spacing: 0.06em;
-
   transition: color 250ms var(--timing-buzier),
     bachground 250ms var(--timing-buzier);
 }
@@ -668,7 +666,6 @@ body {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-
   transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-buzier);
@@ -710,13 +707,9 @@ body {
   height: 294px;
   top: 0;
   left: 0;
-
   background: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-
   transform: translateY(100%);
-  transition: transform 250ms var(--timing-buzier),
-    opacity 250ms var(--timing-buzier);
+  transition: transform 250ms var(--timing-buzier);
 }
 
 .card .label {
@@ -730,23 +723,18 @@ body {
   top: 0;
   left: 0;
   color: var(--second-text-color);
-
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
-
-  opacity: 0;
   transform: translateY(100%);
-  transition: transform 250ms var(--timing-buzier),
-    opacity 250ms var(--timing-buzier);
+  transition: transform 250ms var(--timing-buzier);
 }
 
 .card:hover .thumb::before,
 .card:hover .label,
 .card:focus .thumb::before,
 .card:focus .card .label {
-  opacity: 1;
   transform: translateY(0);
 }
 
@@ -792,8 +780,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-
   opacity: 1;
+  visibility: visible;
   transition: opacity 250ms var(--timing-buzier),
     visibility 250ms var(--timing-buzier);
 }
@@ -805,7 +793,7 @@ body {
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.7);
 }
 
 .modal {
